# hyperlane-monorepo

./: .gitignore  .oxfmtrc.json  .prettierignore  LICENSE  README.md  VALIDATION_STATUS.md  build.sh  hello-mailbox.compact  hyperlane.Dockerfile  package.json  proof-server-testnet.yml  standalone-latest.yml  standalone.yml
.github/workflows/: sov-sdk-testing-docker.yml  test-sov.yml
cardano/: E2E_TEST_REPORT.md  HYPERLANE_CARDANO_IMPLEMENTATION_PLAN.md  relayer-config.json
cardano/cli/: Cargo.toml  README.md
cardano/cli/src/: main.rs
cardano/cli/src/commands/: config.rs  deferred.rs  deploy.rs  greeting.rs  igp.rs  init.rs  ism.rs  mailbox.rs  message.rs  mod.rs  query.rs  registry.rs  token.rs  tx.rs  utxo.rs  validator.rs  warp.rs
cardano/cli/src/utils/: blockfrost.rs  cbor.rs  context.rs  crypto.rs  mod.rs  plutus.rs  tx_builder.rs  types.rs  wallet_lock.rs
cardano/config/: relayer-config.json  test-relayer.json.bak  validator-config.json
cardano/contracts/: aiken.toml  failing_redeemer.json  failing_utxo.json  plutus.json  plutus_applied.json  plutus_recipient.json  tx_context.json
cardano/contracts/lib/: merkle.ak  merkle_test.ak  smt.ak  types.ak  types_test.ak  utils.ak  utils_test.ak
cardano/contracts/validators/: canonical_config_nft.ak  deferred_recipient.ak  example_deferred_recipient.ak  example_generic_recipient.ak  generic_recipient.ak  greeting.ak  greeting_test.ak  igp.ak  mailbox.ak  message_redemption.ak  migrate_test.ak  multisig_ism.ak  multisig_ism_test.ak  processed_message_nft.ak  registry.ak  registry_test.ak  state_nft.ak  stored_message_nft.ak  synthetic_token.ak  test_token.ak  token_redemption.ak  validator_announce.ak  vault.ak  verified_message_nft.ak  warp_route.ak
cardano/deployments/preview/: collateral_warp_route.json  deployment_info.json  generic_recipient.plutus  igp.addr  igp.hash  igp.plutus  init_tx.raw  init_tx.signed  ism_datum.json  ism_datum_updated.json  ism_set_validators_redeemer.json  mailbox.addr  mailbox.hash  mailbox.plutus  mailbox_applied.plutus  mailbox_datum.json  mailbox_state_nft.json  mailbox_state_nft.plutus  multisig_ism.addr  multisig_ism.hash  multisig_ism.plutus  native_warp_route.json  processed_message_nft.plutus  processed_message_nft_applied.plutus  protocol-blockfrost.json  protocol-params.json  protocol.json  recipient_state_nft.plutus  registry.addr  (+21 more)
cardano/docs/: CARDANO_GUIDE.md  CARDANO_HYPERLANE_DESIGN.md  DEPLOYMENT_GUIDE.md  DESIGN.md  FIXME.md  FUTURE_OPTIMIZATIONS.md  HYPERLANE_CARDANO_IMPLEMENTATION_PLAN.md  HYPERLANE_CARDANO_REFERENCE_SCRIPTS.md  IGP_GUIDE.md  INTEGRATION_STATUS.md  RECIPIENT_DEPLOYMENT.md  RECIPIENT_GUIDE.md  REFERENCE_SCRIPT_IMPLEMENTATION_PLAN.md  SECURITY_MODEL.md  VALIDATOR_GUIDE.md  WARP_ROUTE_GUIDE.md  fix-implementation-report.md  incoming-message-flow.puml  issues-and-fix-plan.md  preprod-test-plan.md  runbook.md
cardano/e2e-docker/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run-relayer-local.sh  send-cardano-to-fuji.sh  send-fuji-to-cardano.sh
cardano/scripts/: deploy-core.sh  fetch-protocol-params.sh  fetch-validator-pubkeys.sh  init-contracts.sh  package-lock.json  recover-validator-pubkeys.js  run-relayer.sh  send-message-to-recipient.sh  send-test-message.sh  split-utxo.sh  test-script-format.sh  update-ism-fuji-validator.sh
cardano/testnet-keys/: payment.addr  payment.skey  payment.vkey
contracts/: mailbox.compact  message.compact
contracts/token/: token.compact
midnight/: .gitignore  DEPENDENCY_UPDATE.md  README.md  local-development.yml  package.json  preview-proof-server.yml  tsconfig.json
midnight/scripts/: main.ts  test-new-wallet.ts
rust/main/: Cargo.toml  constants.toml  output.logs
rust/main/chains/hyperlane-cardano/: Cargo.toml  IMPLEMENTATION_STATUS.md
rust/main/chains/hyperlane-cardano/config/: example-relayer-config.json  example-validator-config.json
rust/main/chains/hyperlane-cardano/docs/: QUICK_START.md  RECIPIENT_GUIDE.md  TESTING_GUIDE.md
rust/main/chains/hyperlane-cardano/scripts/: deploy-warp-route.sh  register-recipient.sh  test-dispatch-to-cardano.sh  test-dispatch-to-sepolia.sh
rust/main/chains/hyperlane-cardano/src/: application.rs  blockfrost_provider.rs  consts.rs  interchain_gas.rs  interchain_security_module.rs  lib.rs  mailbox.rs  mailbox_indexer.rs  merkle_tree_hook.rs  multisig_ism.rs  process_redeemer_extractor.rs  provider.rs  recipient_resolver.rs  redeemers.rs  registry.rs  smt.rs  trait_builder.rs  tx_builder.rs  types.rs  validator_announce.rs
rust/main/chains/hyperlane-cardano/src/cardano/signer/: mod.rs
rust/main/chains/hyperlane-cardano/src/rpc/: conversion.rs  mod.rs
rust/main/chains/hyperlane-cardano/src/tx_builder/: mod.rs  tx_encoding.rs  tx_helpers.rs
rust/main/chains/hyperlane-midnight/: Cargo.toml
rust/main/chains/hyperlane-midnight/src/: config.rs  error.rs  lib.rs  signer.rs
rust/main/chains/hyperlane-sovereign/: Cargo.toml  Makefile  README.md  build.rs
rust/main/chains/hyperlane-sovereign/src/: application.rs  indexer.rs  interchain_gas.rs  interchain_security_module.rs  lib.rs  mailbox.rs  merkle_tree_hook.rs  multisig_ism.rs  provider.rs  routing_ism.rs  signers.rs  trait_builder.rs  types.rs  universal_wallet_client.rs  validator_announce.rs
rust/main/chains/hyperlane-sovereign/src/application/: mod.rs  operation_verifier.rs
rust/main/chains/hyperlane-sovereign/src/provider/: client.rs  methods.rs  rest_client.rs  transaction.rs
rust/main/chains/hyperlane-sovereign/src/signers/: ethereum.rs
rust/main/chains/hyperlane-sovereign/src/universal_wallet_client/: crypto.rs  mod.rs  tx_state.rs  types.rs  utils.rs
rust/sealevel/: Cargo.toml
scripts/: create-wallet.ts  deploy.ts  main.ts  mint.ts  old-wallet.ts  send.ts  token.ts  transfer-tdust.ts  utils.ts  wallet.ts
scripts/commands/: balance.ts  mint.ts  send.ts
scripts/utils/: index.ts  token.ts
sdk/: config.ts  example.ts  index.ts  message.ts  transaction-builder.ts  types.ts  witnesses.ts
typescript/cli/: package.json
typescript/sdk/: package.json
(+196 files in other folders)
