[package]
name = "hyperlane-cardano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cardano_rpc"
path = "src/bin/cardano_rpc_main.rs"

[[bin]]
name = "cardano_register"
path = "src/bin/cardano_register.rs"

[dependencies]
hyperlane-core = { path = "../../hyperlane-core" }
hyperlane-operation-verifier = { path = "../../applications/hyperlane-operation-verifier" }
hyperlane-warp-route = { path = "../../applications/hyperlane-warp-route" }
async-trait.workspace = true
derive-new = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4.3"
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
clap = { version = "4.4", features = ["derive"] }

# Blockfrost API client
blockfrost = "1.0.6"

# Pallas for Cardano primitives (native Rust, no WASM)
pallas-crypto = "0.30"
pallas-addresses = "0.30"
pallas-primitives = "0.30"
pallas-codec = "0.30"
pallas-traverse = "0.30"
pallas-txbuilder = "0.30"

# Crypto
blake2 = "0.10"
ed25519-dalek = "2.1"
sha3 = "0.10"
