[package]
name = "hyperlane-cardano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cardano_register"
path = "src/bin/cardano_register.rs"

[dependencies]
hyperlane-core = { path = "../../hyperlane-core" }
hyperlane-operation-verifier = { path = "../../applications/hyperlane-operation-verifier" }
hyperlane-warp-route = { path = "../../applications/hyperlane-warp-route" }
async-trait.workspace = true
derive-new = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
clap = { version = "4.4", features = ["derive"] }

# Blockfrost API client
blockfrost = "1.0.6"

# Pallas for Cardano primitives (native Rust, no WASM)
# Using 1.0.0-alpha.3 for proper Conway era support
pallas-crypto = "1.0.0-alpha.3"
pallas-addresses = "1.0.0-alpha.3"
pallas-primitives = "1.0.0-alpha.3"
pallas-codec = "1.0.0-alpha.3"
pallas-traverse = "1.0.0-alpha.3"
pallas-txbuilder = "1.0.0-alpha.3"

# CBOR decoding
ciborium = "0.2"

# Crypto
blake2 = "0.10"
ed25519-dalek = "2.1"
sha3 = "0.10"
k256 = "0.13"
bech32 = "0.9"
