[package]
name = "hyperlane-sovereign"
version = "0.1.0"
edition.workspace = true

[dependencies]
hyperlane-core = { path = "../../hyperlane-core", features = ["async"] }

async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "macros",
] }
url.workspace = true

bech32 = "0.11.0"
