[package]
 name = "hyperlane-sovereign"
 version = "0.1.0"
 edition.workspace = true

[dependencies]
 demo-hl-rollup-client = { path = "../../../../../sov-hyperlane/examples/demo-hl-rollup-client", default-features = false }
 demo-stf = { path = "../../../../../sov-hyperlane/examples/demo-hl-rollup/stf", default-features = false }
 hyperlane-core = { path = "../../hyperlane-core", features = ["async"] }
 sov-address = { path = "../../../../../sovereign-sdk-wip/crates/module-system/sov-address", default-features = false, version = "0.3" }
 sov-hyperlane = { path = "../../../../../sov-hyperlane/sov-hyperlane", default-features = false }
 sov-modules-api = { path = "../../../../../sovereign-sdk-wip/crates/module-system/sov-modules-api", default-features = false, version = "0.3" }
 sov-rollup-interface = { path = "../../../../../sovereign-sdk-wip/crates/rollup-interface", default-features = false, version = "0.3" }
 sov-test-utils = { path = "../../../../../sovereign-sdk-wip/crates/module-system/sov-test-utils", default-features = false, version = "0.3" }

 async-trait.workspace = true
 base64.workspace = true
 bytes.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 tracing.workspace = true
 url.workspace = true
 hex.workspace = true

 bech32 = "0.11.0"
 borsh = "1.5.3"
